# bluedot

./: .gitignore  README.md  docker-compose.yml  environment.yml
.context/: concept.md  elevator-pitch.md  mvp-architecture.md
backend/: Dockerfile  Makefile  README.md  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/routes/: action.py  explain.py  feedback.py  stories.py
backend/app/core/: config.py  logging.py
backend/app/data/: mock_stories.py  state.py
backend/app/schemas/: action.py  common.py  explain.py  feedback.py  story.py
backend/tests/: test_health.py  test_story_flow.py
docs/: ai-playbook.md  arch-overview.md  backlog.md  data-sources.md  expert-intake-template.md  lessons-learned.md  process-playbook.md  product-brief.md  sprint-00-ai-log.md  sprint-00-plan.md  sprint-00-release.md  sprint-00-retro.md  sprint-00-testplan.md
docs/templates/: ai-log-template.md  release-notes-template.md  sprint-plan-template.md  sprint-retro-template.md  sprint-testplan-template.md
frontend/: Dockerfile  README.md  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/components/: ActionPanel.tsx  ConfidenceBadge.tsx  EmotionChips.tsx  ExpertInsights.tsx  FeedbackPrompt.tsx  ProcessNotesCard.tsx  QoLChart.tsx  StoryCard.tsx
frontend/app/data-play/: fallback.ts  page.tsx  types.ts
frontend/app/lib/: mockData.ts  types.ts
frontend/app/stories/[id]/: page.tsx
instructions/: ai_development_protocol.json  render_deploy_protocol.json
