[tool.poetry]
name = "bluedot-backend"
version = "0.1.0"
description = "FastAPI backend for Blue Dot MVP"
authors = ["Blue Dot AI Team <team@example.com>"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = { extras = ["standard"], version = "^0.27.0" }
SQLAlchemy = "^2.0.25"
psycopg = { extras = ["binary"], version = "^3.1.17" }
pydantic-settings = "^2.2.1"
httpx = "^0.26.0"
structlog = "^24.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-asyncio = "^0.23.3"
ruff = "^0.1.13"
black = "^23.12.1"

[build-system]
requires = ["poetry-core>=1.7.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100

[tool.black]
line-length = 100
